# isensitivity

./: .gitignore  README.md  cabal.project
.github/workflows/: haskell.yml
dataset/: CHANGELOG.md  dataset.cabal
dataset-parsing/: CHANGELOG.md  dataset-parsing.cabal
dataset-parsing/src/Dataset/Adult/: Parser.hs
dataset-parsing/src/Dataset/Adult/Age/: Parser.hs
dataset-parsing/src/Dataset/Adult/HoursPerWeek/: Parser.hs
dataset-parsing/src/Dataset/Adult/NativeCountry/: Parser.hs
dataset-parsing/src/Dataset/Adult/Race/: Parser.hs
dataset-parsing/src/Dataset/Adult/Sex/: Parser.hs
dataset-parsing/src/Dataset/Adult/Workclass/: Parser.hs
dataset-th/: CHANGELOG.md  dataset-th.cabal
dataset-th/src/Dataset/Adult/Age/: TH.hs
dataset-th/src/Dataset/Adult/HoursPerWeek/: TH.hs
dataset-th/src/Dataset/Adult/Race/: TH.hs
dataset-th/src/Dataset/Adult/Sex/: TH.hs
dataset-th/src/Dataset/Adult/Workclass/: TH.hs
dataset/src/Dataset/: Adult.hs
dataset/src/Dataset/Adult/: Age.hs  HoursPerWeek.hs  NativeCountry.hs  Race.hs  Sex.hs  Workclass.hs
dpella-algorithms/: Setup.hs  dpella-algorithms.cabal
dpella-algorithms/src/DPella/Algorithm/: MWEM.hs  Weights.hs
dpella-benchmark/: CHANGELOG.md  adult.csv  dpella-benchmark.cabal  multi-plot.py  plot.py  reference.csv
dpella-benchmark/app/: CompressedAge.hs  Distribution.hs  Main.hs  Util.hs  Workloads.hs
dpella-isensitivity/: dpella-isensitivity.cabal
dpella-isensitivity/bench/: Main.hs
dpella-isensitivity/bench/TH/: DataType.hs
dpella-isensitivity/bench/Test/: Eighty.hs  Fifty.hs  Forty.hs  Hundred.hs  HundredEighty.hs  HundredFifty.hs  HundredForty.hs  HundredNinety.hs  HundredSeventy.hs  HundredSixty.hs  HundredTen.hs  HundredThirty.hs  HundredTwenty.hs  Ninety.hs  Seventy.hs  Sixty.hs  Ten.hs  Thirty.hs  Twenty.hs  TwoHundred.hs
dpella-isensitivity/examples/: Conditional.hs  Main.hs  Nations.hs  Sumtype.hs
dpella-isensitivity/src/DSL/: Deep.hs
dpella-isensitivity/src/TypeLift/: Trick.hs  complexity.md
dpella-isensitivity/src/TypeLift/TH/: NSPatternSynonyms.hs  Reify.hs  STGen.hs  Util.hs
dpella-noise/: dpella-noise.cabal
dpella-noise/src/DPella/: Noise.hs
dpella-noise/src/Numeric/Probability/: Distribution.hs
