cabal-version:      2.4
name:               dataset
version:            0.1.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             Markus Pettersson
maintainer:         markus.pettersson1998@gmail.com
category:           Dataset

library
  exposed-modules:
    Dataset.Adult
    Dataset.Adult.Age
    Dataset.Adult.Workclass
    Dataset.Adult.Race
    Dataset.Adult.Sex
    Dataset.Adult.HoursPerWeek
    Dataset.Adult.NativeCountry

  build-depends:    base ^>=4.12.0.0

  hs-source-dirs:   src
  default-language: Haskell2010
