cabal-version:      2.2
name:               dpella-noise
version:            0.1.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             Agustin Mista
maintainer:         agustin@dpella.io
category:           Testing

common comm
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unticked-promoted-constructors
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:
    comm
  hs-source-dirs:
    src
  exposed-modules:
    DPella.Noise
    Numeric.Probability.Distribution
  build-depends:
    , base               ^>=4.12.0.0
    , mtl
    , containers
    , statistics
    , memory
    , cryptonite
